style: fix form margin & text alignment

--- a/src/assets/css/form.css
+++ b/src/assets/css/form.css
@@ -68,6 +68,7 @@
   border-radius: 9px;
 }
 .input-container {
+  margin: 2rem 0 0 0;
   display: flex;
   width: 100%;
 }
@@ -132,7 +133,7 @@
   height: 44px;
   font-size: 16px;
   width: 100%;
-  margin-bottom: 10%;
+  margin: 0;
   -webkit-appearance: none;
   background: #d9d9d9;
   border: 1px solid #d9d9d9;
@@ -166,7 +167,7 @@
   display:none;
 }
 #submit {
-  margin: 3% auto 6% auto;
+  margin: 8% auto 4% auto;
   height: 3rem;
   width: 6rem;
   background-color: #ffffff;
@@ -225,9 +226,14 @@
   transform: translateY(-0.3rem);
 }
 
+.radio-container{
+  margin:1rem 0 0 0;
+  text-align: center;
+}
+
 #radio-container-head {
   text-transform: capitalize;
-  text-align: left;
+  margin: 0 auto;
 }
 
 .radio {
@@ -241,7 +247,7 @@
   box-shadow: inset 0 0 0 1.5px #000046;
   appearance: none;
   padding: 0;
-  margin: 0;
+  margin: 1rem auto;
   transition: box-shadow 150ms cubic-bezier(0.95, 0.15, 0.5, 1.25);
   pointer-events: none;
 }
@@ -252,9 +258,10 @@
   outline: none;
 }
 .slots-desc {
-  padding: 1%;
+  margin: 0 0 0;
   font-weight: bold;
-  font-size: smaller;
+  font-size: 0.7rem;
+  word-spacing: 0.1rem;
 }
 .radio-text {
   vertical-align: middle;
@@ -282,7 +289,12 @@
     font-size: 12px;
     width: 100%;
   }
-
+  #radio-container-head {
+    font-size: 1.3rem;
+  }
+  .slots-desc{
+    font-size: 0.6rem;
+  }
   #submit {
     height: 2.5rem;
     width: 5rem;
